--- a/api-server/build.gradle
+++ b/api-server/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     compile "com.google.code.gson:gson:2.8.2"
     compile "com.github.salomonbrys.kotson:kotson:2.5.0"
     compile "com.typesafe:config:1.3.2"
+    compile "org.jetbrains.exposed:exposed:0.11.2"
+    compile "org.postgresql:postgresql:42.2.2"
     testCompile "junit:junit:4.12"
     testCompile "com.novocode:junit-interface:0.11"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
