Added configurable db properties. Hacky code to get it working. Needs good modularisation and dependency injection

--- a/api-server/build.gradle
+++ b/api-server/build.gradle
@@ -33,7 +33,7 @@ task runDebug(type: JavaExec) {
 
 sourceSets {
     main.kotlin.srcDirs = [ 'src' ]
-    main.resources.srcDirs = [ 'resources' ]
+    main.resources.srcDirs = [ 'src/main/resources' ]
 }
 
 sourceCompatibility = 1.8
